toy_tribe/static/css/style.css
/* ... */
.hero-button:hover, .hero-button:focus {
    background-color: #D02847;
    color: #FFF3D3;
}

#homepage-message {
    color: #D02847;
    text-shadow: -1px -1px 0 #333A3F, 1px -1px 0 #333A3F, -1px 1px 0 #333A3F, 1px 1px 0 #333A3F;
    text-align: center;
    font-size: 2.5rem;
    max-width: 90%;
    margin: 0 auto;
}

/* ---------- signup.html ---------- */
/* Signup title */
#signup-title {
    text-align: center;
    margin-top: 10px;
}

#signup-title img{
    height: 100px;
}

/* Error display */
.signup-error {
    color: #D02847;
    margin-bottom: 15px;
    text-align: center;
    max-width: 30%;
    margin: 0 auto;
    font-weight: bolder;
}

/* Signup form */
#signup-form {
    max-width: min(400px, 85%);
    margin: 0 auto;
}

#signup-form i {
    color: #333A3F;
    font-size: 1.5rem;
    padding: 0 10px 0 5px;
}

#signup-form label {
    color: #333A3F;
    font-size: 1.5rem;
}

#signup-form input {
    margin-bottom: 20px;
}

#signup-form #password {
    margin-bottom: 0 !important;
}

#signup-form span {
    color: #333A3F;
    margin-bottom: 20px;
}

.confirm-password {
    margin-top: 20px;
}

#signup-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
}

/* ---------- login.html ---------- */
/* Login title */
#login-title {
    text-align: center;
}

#login-title img {
    height: 100px;
}

/*Login form */
#login-form {
    max-width: min(300px, 85%);
    margin: 0 auto;
}

#login-form label {
    color: #333A3F;
    font-size: 1.5rem;
}

#login-form input {
    margin-bottom: 20px;
}

#login-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
}

#login-form p {
    text-align: center;
}

#login-form p a {
    text-transform: none;
    font-size: 1.1rem;
    background-color: #D02847;
    color: #FFF3D3;
    box-shadow: none;
    border: 2pt solid black;
}

.form-error-messages {
    font-size: 0.8rem;
    font-weight: bolder;
    color: #D02847;
    margin-bottom: 10px;
}

/* ---------- profile.html ---------- */
/* Page content */
.profile-content {
    width: min(1200px, 80%);
    height: auto;
    margin-top: 20px;
}

/* Flag display */
.country-flag {
    height: 45px;
    width: 60px;
    float: right;
}

/* Verified parent display */
.parent-check {
    margin-top: 10px;
    float: right;
}

.parent-check span {
    color:#333A3F;
}

.parent-check i {
    color: #008000;
    font-size: 1.5rem;
    padding: 0;
}

/* Profile picture */
.profile-picture {
    overflow: hidden;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.profile-picture img {
    height: auto;
    width: 100%;
    border-radius: 50%;
}

/* Profile name */
.profile-name {
    text-align: center;
}

/* Profile about me */
.profile-about-me {
    color: #333A3F;
    max-height: 300px;
    overflow: auto;
}

.profile-about-me span{
    font-weight: bolder;
    font-size: 1.5rem;
}

/* Edit and delete buttons */
.profile-buttons-container {
    display: flex;
    justify-content: space-evenly;
    margin-top: 30px;
}
.profile-buttons {
    font-size: 1.1rem;
    background-color: #f5f5f5;
    color: #333A3F;
}

.profile-buttons:hover, .profile-buttons:focus {
    background-color: #D02847;
    color: #FFF3D3;
    font-size: 1.2rem;
}

/* Reviews */
.toy-reviewed {
    font-size: 1.3rem;
    height: 4rem;
    height: auto;
}

.profile-review-content {
    max-height: 200px;
    overflow: auto;
}

.profile-review-content,
.review-content-box p {
    overflow-x: hidden !important;
}

/* ---------- edit_profile.html ---------- */
/* Edit profile title */
#edit-profile-title {
    text-align: center;
    color:#333A3F;
}

/* Edit profile form */
#edit-profile-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#edit-profile-form label {
    color: #333A3F;
    font-size: 1rem;
}

.edit-profile-input {
    margin-top: 20px;
}

.edit-profile-input textarea {
    height: 200px;
    overflow: auto; 
    background-color: #FFF3D3;
}

.edit-profile-input .switch {
    text-align: center;
    font-family: "Open Sans", Arial, Helvetica, sans-serif;
}

.switch label input[type=checkbox]:checked+.lever:after {
    background-color: #D02847;
}

.switch label input[type=checkbox]:checked+.lever {
    background-color: #F6D36A;
}

.edit-profile-buttons {
    display: flex;
    justify-content: space-around;
}

.edit-profile-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;  
    border: 1px solid black;
    padding: 5px;  
    border-radius: 5px;
}

/* ---------- change_password.html ---------- */
/* Change password title */
#change-password-title {
    text-align: center;
}

/* Helper text */
.change-password-helper-text-container {
    max-width: min(600px, 85%);
    margin: 0 auto;
    text-align: center;
}

.change-password-helper-text {
    color: #333A3F;
}

/* Change password form */
#password-form {
    max-width: min(600px, 85%);
    margin: 0 auto; 
}

#password-form label {
    color: #333A3F;
    font-size: 1rem;
}

#change-password-button {
    font-size: 1.5rem;
    background-color: #D02847;
    color: #FFF3D3;
    cursor: pointer;
    margin-bottom: 50px;    
}

.password-errors {
    margin-bottom: 5px;
}

/* ---------- toys.html ---------- */
/* Page title */
#toys-title {
    text-align: center;
    margin: 10px;
}
#toys-title img {
    height: 100px;
    margin-top: 10px;
}

/*Page layout */
#toys-page {
    width: 95%;
}

/* Toy cards */
.toys-card {
    background-color: rgba(255, 243, 223, 0.6);
    height: 386px;
    overflow: auto;
}

.toy-description {
    height: 150px !important;
    overflow: auto;
}

.card-image {
    margin-top:10px;
}

.toy-image-link {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
}

.toys-image {
    width: auto !important;
    max-height: 200px;
}
/* ... */

